@@ -1,4 +1,9 @@
 2006-10-23  Nate Nielsen  <nielsen@memberwebs.com>
+
+	* libseahorse/seahorse-ssh-source.c: Fix crasher when generating SSH key.
+	Fixes #364081
+
+2006-10-23  Nate Nielsen  <nielsen@memberwebs.com>
 	
 	* configure.in: Configure properly when libnautilus-extension is not found.
 
